fixed content overflowing on mobile for portfolio cover

--- a/src/components/layout/styles/compiled/main.css
+++ b/src/components/layout/styles/compiled/main.css
@@ -134,7 +134,8 @@ table {
 }
 
 .front {
-  height: 50vh;
+  height: 51vh;
+  width: 70vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -148,6 +149,7 @@ table {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin: 0 auto;
 }
 
 .front_card {
@@ -273,27 +275,25 @@ table {
   cursor: pointer;
 }
 
-.app {
-  width: 100vw;
-  height: 100vh;
-}
-
 .placeholder {
   background: url("../../../images/pexels-ryutaro-tsukata-5472598.jpg") center center;
   background-size: cover;
+  width: 100%;
   height: 100vh;
 }
 
 .placeholder_text {
   color: #0026ff;
-  text-shadow: 2px 2px white;
+  width: 90%;
+  margin: 0 auto;
+  text-shadow: 2px 2px black;
+  padding: 4% 0;
   text-align: center;
-  padding: 2%;
 }
 
 .placeholder_text h1 {
-  font-size: 90px;
-  margin: 10px;
+  font-size: 50px;
+  margin-bottom: 10px;
 }
 
 .placeholder_text p {
