--- a/src/components/layout/styles/sass/_app.scss
+++ b/src/components/layout/styles/sass/_app.scss
@@ -1,4 +1,1 @@
-.app {
-	width: 100vw;
-	height: 100vh;
-}
+
