--- a/src/components/layout/styles/sass/_frontcover.scss
+++ b/src/components/layout/styles/sass/_frontcover.scss
@@ -1,10 +1,11 @@
 .front {
-	height: 50vh;
+	height: 51vh;
+	width: 70vw;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-
+	margin: 0 auto;
 	&_card {
 		position: absolute;
 		height: 300px;
