--- a/src/components/layout/styles/sass/_placeholder.scss
+++ b/src/components/layout/styles/sass/_placeholder.scss
@@ -2,15 +2,19 @@
 	background: url('../../../images/pexels-ryutaro-tsukata-5472598.jpg') center
 		center;
 	background-size: cover;
+	width: 100%;
 	height: 100vh;
+
 	&_text {
 		color: rgb(0, 38, 255);
-		text-shadow: 2px 2px white;
+		width: 90%;
+		margin: 0 auto;
+		text-shadow: 2px 2px black;
+		padding: 4% 0;
 		text-align: center;
-		padding: 2%;
 		h1 {
-			font-size: 90px;
-			margin: 10px;
+			font-size: 50px;
+			margin-bottom: 10px;
 		}
 		p {
 			font-size: 30px;
